fix: weird behaviour with AppTextInput
It was overflowing and adding some whitespace around the parent and the child elements

--- a/src/components/AppTextInput/AppTextInput.css
+++ b/src/components/AppTextInput/AppTextInput.css
@@ -1,14 +1,15 @@
-.AppTextInput {
-    width: 100%;
-
-
+:root {
     --app-text-input-height: 40px;
+}
+
+.AppTextInput {
     height: var(--app-text-input-height);
 
+    overflow: hidden;
     display: flex;
+    box-sizing: content-box;
     flex-direction: row;
 
-    overflow: hidden;
     border: 2px solid var(--color-primary);
     border-radius: 4px;
 }
@@ -17,7 +18,7 @@
     flex-grow: 1;
     background: var(--color-slate-light);
     padding: 0 calc(var(--app-text-input-height) * 0.3);
-    font-size: calc(var(--app-text-input-height) * 0.65);
+    font-size: calc(var(--app-text-input-height) * 0.45);
     font-family: var(--brand-font);
     border: 0;
 }
