--- a/src/components/AppTextInputAction/AppTextInputAction.css
+++ b/src/components/AppTextInputAction/AppTextInputAction.css
@@ -1,6 +1,8 @@
 .AppTextInputAction {
     background: var(--color-primary);
+
     border: 0;
+    padding: 0;
 
     height: var(--app-text-input-height);
     width: var(--app-text-input-height);
