--- a/src/pages/InsideGroupPage/InsideGroupPage.css
+++ b/src/pages/InsideGroupPage/InsideGroupPage.css
@@ -1,4 +1,4 @@
-.CreateGroupPage {
+.InsideGroupPage {
     height: 100vh;
 
     display: grid;
